Fix for b/11449993 AD groups connector does not remove tombstone entities from entities table. Fix for b/10836391 Tombstone removal optimization Code Review : https://codereview.appspot.com/21750045/

--- a/projects/adgroups/source/java/com/google/enterprise/connector/adgroups/sql.properties
+++ b/projects/adgroups/source/java/com/google/enterprise/connector/adgroups/sql.properties
@@ -26,6 +26,8 @@ FIND_FOREIGN=SELECT entityid FROM :entities WHERE domainsid = :domainsid AND rid
 MERGE_MEMBERSHIP=MERGE INTO :members (groupid, memberdn, memberid) KEY (groupid, memberdn) VALUES (:groupid, :memberdn, :memberid);
 DELETE_MEMBERSHIPS=DELETE FROM :members WHERE groupid IN (SELECT entityid FROM :entities WHERE dn = :dn OR objectguid = :objectguid) OR memberid in (SELECT entityid FROM :entities WHERE dn = :dn OR objectguid = :objectguid);
 
+DELETE_MEMBERSHIPS_BY_ENTITYID=DELETE FROM :members WHERE groupid = :entityid OR memberid = :entityid;
+DELETE_ENTITY_BY_ENTITYID=DELETE FROM entities WHERE entityid = :entityid;
 SELECT_USER_BY_SAMACCOUNTNAME=SELECT entityid, entities.dn, samaccountname, userprincipalname, domainsid, rid, primarygroupid, objectguid, usnchanged, dnsroot, netbiosname FROM :entities JOIN :servers ON domainsid = sid WHERE samaccountname = :samaccountname AND primarygroupid IS NOT NULL;
 SELECT_USER_BY_DOMAIN_SAMACCOUNTNAME=SELECT entityid, entities.dn, samaccountname, userprincipalname, domainsid, rid, primarygroupid, objectguid, usnchanged, dnsroot, netbiosname FROM :entities JOIN :servers ON domainsid = sid WHERE samaccountname = :samaccountname and (UPPER(netbiosname) = UPPER(:netbiosname) OR LOWER(dnsroot) = LOWER(:netbiosname)) AND primarygroupid IS NOT NULL;
 SELECT_ENTITY_BY_DN_AND_NOT_GUID=SELECT dn, samaccountname, userprincipalname, domainsid, rid, primarygroupid, objectguid, wellknown FROM :entities WHERE dn = :dn;
@@ -33,7 +35,7 @@ SELECT_WELLKNOWN_MEMBERSHIPS=SELECT entityid, netbiosname, samaccountname FROM :
 SELECT_MEMBERSHIPS_BY_ENTITYID=SELECT entityid, netbiosname, samaccountname FROM :members JOIN entities ON groupid = entityid JOIN :servers ON domainsid = sid WHERE memberid = :entityid;
 SELECT_MEMBERSHIPS_BY_DN=SELECT e1.dn, memberdn, memberid FROM :entities e1 JOIN :members ON e1.entityid = groupid AND e1.dn = :dn LEFT JOIN :entities e2 ON memberid = e2.entityid WHERE e1.rid != e2.primarygroupid OR e2.primarygroupid IS NULL;
 DELETE_MEMBERSHIPS_BY_DN_AND_MEMBERDN=DELETE FROM :members WHERE groupid IN (SELECT entityid FROM :entities WHERE dn = :dn) AND memberdn = :memberdn
-SELECT_ALL_ENTITIES_BY_SID=SELECT dn FROM :entities WHERE domainsid = :sid;
+SELECT_ALL_ENTITIES_BY_SID=SELECT dn, entityid FROM :entities WHERE domainsid = :sid;
 DELETE_ENTITY=DELETE FROM entities WHERE objectguid = :objectguid;
 
 TEST_CONNECTORNAME=SELECT 1 FROM :connectornames LIMIT 1;
