--- a/projects/adgroups/source/java/com/google/enterprise/connector/adgroups/sql_sqlserver.properties
+++ b/projects/adgroups/source/java/com/google/enterprise/connector/adgroups/sql_sqlserver.properties
@@ -24,6 +24,8 @@ FIND_FOREIGN=SELECT entityid FROM :entities WHERE domainsid = :domainsid AND rid
 MERGE_MEMBERSHIP=INSERT INTO :members (groupid, memberdn, memberid) SELECT :groupid, :memberdn, :memberid WHERE NOT EXISTS (SELECT NULL FROM :members WHERE groupid = :groupid AND memberdn = :memberdn); UPDATE :members SET memberid = :memberid WHERE groupid = :groupid AND memberdn = :memberdn and @@ROWCOUNT=0;
 DELETE_MEMBERSHIPS=DELETE FROM :members WHERE groupid IN (SELECT entityid FROM :entities WHERE dn = :dn OR objectguid = :objectguid) OR memberid in (SELECT entityid FROM :entities WHERE dn = :dn OR objectguid = :objectguid);
 
+DELETE_MEMBERSHIPS_BY_ENTITYID=DELETE FROM :members WHERE groupid = :entityid OR memberid = :entityid;
+DELETE_ENTITY_BY_ENTITYID=DELETE FROM entities WHERE entityid = :entityid;
 RESOLVE_PRIMARY_GROUPS=UPDATE :members SET groupid = b.entityid, memberdn = a.dn, memberid = a.entityid FROM :entities a INNER JOIN :entities b ON a.domainsid = b.domainsid AND a.primarygroupid = b.rid INNER JOIN :members m ON m.groupid = b.entityid AND m.memberdn = a.dn;INSERT INTO :members (groupid, memberdn, memberid) SELECT b.entityid, a.dn, a.entityid FROM :entities a INNER JOIN :entities b ON a.domainsid = b.domainsid AND a.primarygroupid = b.rid WHERE NOT EXISTS (SELECT null FROM :members m WHERE m.groupid = b.entityid AND m.memberdn = a.dn );
 
 SELECT_USER_BY_SAMACCOUNTNAME=SELECT entityid, entities.dn, samaccountname, userprincipalname, domainsid, rid, primarygroupid, objectguid, usnchanged, dnsroot, netbiosname FROM :entities JOIN :servers ON domainsid = sid WHERE samaccountname = :samaccountname AND primarygroupid IS NOT NULL;
@@ -33,7 +35,7 @@ SELECT_WELLKNOWN_MEMBERSHIPS=SELECT entityid, netbiosname, samaccountname FROM :
 SELECT_MEMBERSHIPS_BY_ENTITYID=WITH ADMembership (groupid, membershipvia, groupLevel) AS ( SELECT groupid, membershipvia = '|' + CAST(groupid AS VARCHAR(MAX)) + '|', 1 AS groupLevel FROM :members WHERE memberid = :entityid UNION ALL SELECT groupid, membershipvia = '|' + CAST(groupid AS VARCHAR(MAX)) + '|' , 1 AS groupLevel FROM :members WHERE memberid IN (SELECT entityid FROM :entities WHERE wellknown = 1) UNION ALL SELECT m.groupid, membershipvia + CAST(ADMembership.groupid AS VARCHAR(MAX)) + '|', groupLevel + 1 FROM ADMembership INNER JOIN :members m ON m.memberid = ADMembership.groupid WHERE CHARINDEX('|' + CAST(m.groupid AS VARCHAR(MAX))+ '|',membershipvia)=0 AND groupLevel <= 1000) SELECT DISTINCT entityid, netbiosname, samaccountname FROM ADMembership INNER JOIN :entities e ON ADMembership.groupid = e.entityid INNER JOIN :servers s ON s.sid = e.domainsid OPTION (MAXRECURSION 2000);
 SELECT_MEMBERSHIPS_BY_DN=SELECT e1.dn, memberdn, memberid FROM :entities e1 JOIN :members ON e1.entityid = groupid AND e1.dn = :dn LEFT JOIN :entities e2 ON memberid = e2.entityid WHERE e1.rid != e2.primarygroupid OR e2.primarygroupid IS NULL;
 DELETE_MEMBERSHIPS_BY_DN_AND_MEMBERDN=DELETE FROM :members WHERE groupid IN (SELECT entityid FROM :entities WHERE dn = :dn) AND memberdn = :memberdn
-SELECT_ALL_ENTITIES_BY_SID=SELECT dn FROM :entities WHERE domainsid = :sid;
+SELECT_ALL_ENTITIES_BY_SID=SELECT dn, entityid FROM :entities WHERE domainsid = :sid;
 DELETE_ENTITY=DELETE FROM entities WHERE objectguid = :objectguid;
 
 TEST_CONNECTORNAME=SELECT TOP 0 1 FROM :connectornames;
