--- a/projects/adgroups/version.properties
+++ b/projects/adgroups/version.properties
@@ -4,7 +4,7 @@
 # The version of the AD Groups Connector
 version.major = 3
 version.minor = 2
-version.micro = 4-M1
+version.micro = 4
 version = ${version.major}.${version.minor}.${version.micro}
 
 # The Specification version of the Connector Manager SPI
