Use DatabaseConnectionPool in AD Groups Connector (b/10344956). Code Review : https://codereview.appspot.com/84720043/

--- a/projects/adgroups/build.xml
+++ b/projects/adgroups/build.xml
@@ -133,6 +133,7 @@
         <pathelement location="${junit.jarfile}" />
         <fileset dir="${cm-third-party.jar}">
           <include name="prod/*.jar" />
+          <include name="tests/*.jar" />
         </fileset>
 <!--XXX
         <fileset dir="${lib.jar.dir}">
@@ -162,6 +163,7 @@
         <pathelement location="${jarfile}" />
         <fileset dir="${cm-third-party.jar}">
           <include name="prod/*.jar" />
+          <include name="tests/*.jar" />
         </fileset>
         <pathelement location="${junit.jarfile}" />
         <pathelement location="${sql.properties}/*.properties" />
