Add a helper method to construct SP group Principals. This is used consistently for both ACLs and group lookup to construct the "[siteUrl]groupName" principals.
Related changes:

* Add tests for the helper method, and also for the calling methods to
  test for regressions.

* Make AclHelper.processPrincipal package access for testing.

* Add CM tests/*.jar to compile_tests and run_tests class paths for
  EasyMock.

* Fixed a typo in googleGlobalNamespace in TestConfig.properties.

Code review: https://codereview.appspot.com/89250043/

--- a/projects/sharepoint/build.xml
+++ b/projects/sharepoint/build.xml
@@ -237,6 +237,7 @@
         <pathelement location="${adgroups.jar}" />
         <fileset dir="${cm-third-party.jar}">
           <include name="prod/*.jar" />
+          <include name="tests/*.jar" />
         </fileset>
         <fileset dir="${lib.jar.dir}">
           <include name="**/*.jar" />
@@ -277,7 +278,7 @@
         <pathelement location="${adgroups.jar}" />
         <fileset dir="${cm-third-party.jar}">
           <include name="prod/*.jar" />
-          <include name="tests/jcr-1.0.jar" />
+          <include name="tests/*.jar" />
         </fileset>
         <pathelement location="${config}" />
         <fileset dir="${lib.jar.dir}">
