--- a/projects/sharepoint/source/javatests/TestConfig.properties
+++ b/projects/sharepoint/source/javatests/TestConfig.properties
@@ -1,7 +1,7 @@
 # connector configurayion values
 googleConnectorWorkDir=
 googleWorkDir=
-googleGlobalnamespace=
+googleGlobalNamespace=
 googleLocalNamespace=
 sharepointUrl=http://example.com/dummy
 aliasMap=
