Tagged the 3.2.6 release from /tags/builds/3.2.x/3.2.6-RC1.

--- a/projects/sharepoint/source/javatests/TestConfig.properties
+++ b/projects/sharepoint/source/javatests/TestConfig.properties
@@ -1,7 +1,7 @@
 # connector configurayion values
 googleConnectorWorkDir=
 googleWorkDir=
-googleGlobalNamespace=
+googleGlobalnamespace=
 googleLocalNamespace=
 sharepointUrl=http://example.com/dummy
 aliasMap=
