Fix for b/15386188 Use WITH(NOLOCK) Table hints for MS SQL Server queries used during group resolution. Retry queries on Error code 601. Fix for b/12570906 Log time taken during group resolution for each user. Code Review : https://codereview.appspot.com/104870044/

--- a/projects/sharepoint/source/java/com/google/enterprise/connector/sharepoint/sql/sqlQueries_sqlserver.properties
+++ b/projects/sharepoint/source/java/com/google/enterprise/connector/sharepoint/sql/sqlQueries_sqlserver.properties
@@ -8,4 +8,4 @@
 
 # Queries specific to Microsoft SQL Server.
 UDS_INSERT=if exists (select null from {0} where  SPGROUPID = {3} and SPUSERID = {1} and SPSITE = {5}) update {0} set SPUserName = {2}, SPGroupName = {4} where  SPGROUPID = {3} and SPUSERID = {1} and SPSITE = {5} else insert {0} (SPUserID, SPUserName, SPGroupID, SPGroupName, SPSite) values ({1}, {2}, {3}, {4}, {5})
-
+UDS_SELECT_FOR_ADGROUPS=SELECT SPUserID, SPUserName, SPGroupID, SPGroupName, SPSite FROM {0} WITH(NOLOCK) WHERE SPUserName in ({1});
