Make highestcommittedusn DB column a BIGINT, rather than INT (b/10508533). The Active Directory highestCommittedUSN attribute is a 64-bit integer.
Change the column type for H2 and SQL Server. The existing type for
Oracle, NUMBER, is OK.

Other changes:

* Switch an existing test in AdDbUtilTest to truly use the in-memory
  H2 database for testing. It was using a database file named "mem".

* Change the build to copy the SQL properties files to build/classes
  so the tests could find them. They were mentioned in the JUnit class
  path, but incorrectly, pointing directly at the files rather than
  the root package directory.

Code review: https://codereview.appspot.com/107060044/

--- a/projects/adgroups/build.xml
+++ b/projects/adgroups/build.xml
@@ -32,7 +32,6 @@
   <property name="tests.jarfile" value="${connector-manager.dir}/${jar.dir}/connector-tests.jar" />
   <property name="downloads.dir" value="downloads" />
   <property name="cm-third-party.jar" value="${connector-manager.dir}/third-party/" />
-  <property name="sql.properties" value="source/java/com/google/enterprise/connector/sharepoint/sql/" />
 
   <!--Cobertura properties -->
   <property file="${config}/build_code_coverage.properties" />
@@ -80,6 +79,11 @@
             location="../sharepoint/dist/jarfile/connector-sharepoint.jar" />
       </classpath>
     </javac>
+    <copy todir="${classes}" overwrite="yes">
+      <fileset dir="${src}">
+          <include name="**/sql*.properties" />
+      </fileset>
+    </copy>
   </target>
 
   <target name="compile_tests" depends="init, compile">
@@ -126,7 +130,6 @@
           <include name="prod/*.jar" />
           <include name="tests/*.jar" />
         </fileset>
-        <pathelement location="${sql.properties}/*.properties" />
         <pathelement location="${config}" />
         <pathelement 
             location="../sharepoint/dist/jarfile/connector-sharepoint.jar" />
