--- a/projects/adgroups/source/java/com/google/enterprise/connector/adgroups/sql.properties
+++ b/projects/adgroups/source/java/com/google/enterprise/connector/adgroups/sql.properties
@@ -1,6 +1,6 @@
 TEST_SERVERS=SELECT 1 FROM :servers LIMIT 1;
 CREATE_SERVERS_SEQUENCE=
-CREATE_SERVERS=CREATE TABLE IF NOT EXISTS :servers (serverid IDENTITY, dn VARCHAR(1024) NOT NULL, netbiosname VARCHAR(32) NOT NULL, dnsroot VARCHAR(64) NOT NULL, sid VARCHAR(64) NOT NULL, dsservicename VARCHAR(512) NOT NULL, invocationid VARCHAR(128) NOT NULL, highestcommittedusn INT NOT NULL, lastfullsync DATETIME, UNIQUE(dn), UNIQUE(sid, dnsroot));
+CREATE_SERVERS=CREATE TABLE IF NOT EXISTS :servers (serverid IDENTITY, dn VARCHAR(1024) NOT NULL, netbiosname VARCHAR(32) NOT NULL, dnsroot VARCHAR(64) NOT NULL, sid VARCHAR(64) NOT NULL, dsservicename VARCHAR(512) NOT NULL, invocationid VARCHAR(128) NOT NULL, highestcommittedusn BIGINT NOT NULL, lastfullsync DATETIME, UNIQUE(dn), UNIQUE(sid, dnsroot));
 DROP_SERVERS_TABLE=DROP TABLE :servers;
 
 TEST_ENTITIES=SELECT 1 FROM :entities LIMIT 1;
