--- a/projects/adgroups/source/java/com/google/enterprise/connector/adgroups/sql_sqlserver.properties
+++ b/projects/adgroups/source/java/com/google/enterprise/connector/adgroups/sql_sqlserver.properties
@@ -1,6 +1,6 @@
 TEST_SERVERS=SELECT TOP 0 1 FROM :servers;
 CREATE_SERVERS_SEQUENCE=
-CREATE_SERVERS=CREATE TABLE :servers (serverid BIGINT IDENTITY, dn NVARCHAR(1024) NOT NULL, netbiosname VARCHAR(32) NOT NULL, dnsroot VARCHAR(64) NOT NULL, sid VARCHAR(64) NOT NULL, dsservicename VARCHAR(512) NOT NULL, invocationid VARCHAR(128) NOT NULL, highestcommittedusn INT NOT NULL, lastfullsync DATETIME, PRIMARY KEY (serverid), UNIQUE(dn), UNIQUE(sid, dnsroot));
+CREATE_SERVERS=CREATE TABLE :servers (serverid BIGINT IDENTITY, dn NVARCHAR(1024) NOT NULL, netbiosname VARCHAR(32) NOT NULL, dnsroot VARCHAR(64) NOT NULL, sid VARCHAR(64) NOT NULL, dsservicename VARCHAR(512) NOT NULL, invocationid VARCHAR(128) NOT NULL, highestcommittedusn BIGINT NOT NULL, lastfullsync DATETIME, PRIMARY KEY (serverid), UNIQUE(dn), UNIQUE(sid, dnsroot));
 TEST_ENTITIES=SELECT TOP 0 1 FROM :entities;
 CREATE_ENTITIES_SEQUENCE=
 CREATE_ENTITIES=CREATE TABLE :entities (entityid BIGINT IDENTITY, dn NVARCHAR(1024), samaccountname NVARCHAR(256), userprincipalname NVARCHAR(256), domainsid VARCHAR(64) NOT NULL, rid INT, primarygroupid INT, objectguid VARCHAR(64), usnchanged BIGINT, wellknown INT NOT NULL, PRIMARY KEY(entityid), UNIQUE(dn), UNIQUE(domainsid, primarygroupid, rid, entityid, dn), UNIQUE(objectguid)); CREATE INDEX rid:entities:index ON :entities(RID); CREATE INDEX wellknown:entities:index ON :entities(wellknown); CREATE INDEX samaccountname:entities:index on :entities(samaccountname);
