--- a/tvartak/readlocked/projects/sharepoint/version.properties
+++ b/tvartak/readlocked/projects/sharepoint/version.properties
@@ -4,7 +4,7 @@
 # The version of the SharePoint Connector
 version.major = 3
 version.minor = 2
-version.micro = 8
+version.micro = 7-X2
 version = ${version.major}.${version.minor}.${version.micro}
 
 # The Specification version of the Connector Manager SPI
