Test configuration properties for list item counts.
Code review: https://codereview.appspot.com/129390043

--- a/projects/sharepoint/source/javatests/TestConfig.properties
+++ b/projects/sharepoint/source/javatests/TestConfig.properties
@@ -42,6 +42,9 @@ Site1_List1_GUID=
 Site1_List1_URL=
 Site1_List1_Item1_URL=
 Site1_List1_Item2_URL=
+Site1_List1_Published_Item_Count=
+Site1_List1_Unpublished_Item_Count=
+
 #List2: Preferably a generic list
 Site1_List2_GUID=
 Site1_List2_URL=
