Updating build.xml for 3.2.9-X1 release

--- a/tvartak/searchboxexpiredsession/projects/searchbox/build.xml
+++ b/tvartak/searchboxexpiredsession/projects/searchbox/build.xml
@@ -24,7 +24,7 @@
   <property name="saml.dir" value="../../google-saml-bridge-for-windows" />
 
   <!--PROPERTIES-->
-  <property name="version" value="3.2.0" />
+  <property name="version" value="3.2.9-X1" />
 
   <!--Directories-->
   <property name="projsb.dir" value="." />
